Pop-ups pagina de sabores

--- a/module/Application/view/application/flavors/list.phtml
+++ b/module/Application/view/application/flavors/list.phtml
@@ -7,3 +7,28 @@
         
     </p>
 <?php endforeach;?>
+
+<p>
+		        <b>Bacon</b><br/>
+		        <a href="#" class="link semantic_info" data-original-title="Mozarela">Mozarela</a>,
+		        <a href="#" class="link semantic_info" data-original-title="Bacon">Bacon</a>,
+		        <a href="#" class="link semantic_info" data-original-title="Tomate">Tomate</a>
+		    </p>
+
+			
+			     
+	    <!-- Modal -->
+	    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	      <div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		<h3 id="myModalLabel">Dinamico?</h3>
+	      </div>
+	      <div class="modal-body"></div>
+	      <div class="modal-footer">
+		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		<!-- <button class="btn btn-primary">Save changes</button> -->
+	      </div>
+	    </div>
+            <!-- Click over -->
+            <div id="semantic_content" style="display: none"></div>
+
