Prototipo view Sabores

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -42,11 +42,11 @@
         </div>
         <div class="container">
             <?php echo $this->content; ?>
-            <hr>
+            <!--<hr>
             <footer>
-                <p>&copy; 2013 by Rox Web Solutions Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
-            </footer>
+                <!--<p>&copy; 2013 by Rox Web Solutions Ltd. <?php //echo $this->translate('All rights reserved.') ?></p> 
+            </footer>-->
         </div> <!-- /container -->
-        <?php echo $this->inlineScript() ?>
+        <?php //echo $this->inlineScript() ?>
     </body>
 </html>
