--- a/module/Application/view/application/flavors/list.phtml
+++ b/module/Application/view/application/flavors/list.phtml
@@ -1,4 +1,4 @@
-<?php foreach ($this->flavors as $node): ?>
+<?php /*foreach ($this->flavors as $node): ?>
     <p>
         <b><?= $node['flavorName']->getProperty('name') ?></b><br/>
         <?php foreach ($this->ingredients[$node['flavorName']->getId()] as $ingredient): ?>
@@ -6,26 +6,56 @@
         <?php endforeach; ?>
         
     </p>
-<?php endforeach;?>
-
+<?php endforeach;*/?>
+<h1>Sabores disponiveis</h1>
 <p>
-		        <b>Bacon</b><br/>
-		        <a href="#" class="link semantic_info" data-original-title="Mozarela">Mozarela</a>,
-		        <a href="#" class="link semantic_info" data-original-title="Bacon">Bacon</a>,
-		        <a href="#" class="link semantic_info" data-original-title="Tomate">Tomate</a>
-		    </p>
+    <b>Bacon</b><br/>
+    <a href="#" class="link semantic_info" data-original-title="Molho de tomate">Molho de tomate</a>,
+    <a href="#" class="link semantic_info" data-original-title="Mozarela">Mozarela</a>,
+    <a href="#" class="link semantic_info" data-original-title="Bacon">Bacon</a>,
+    <a href="#" class="link semantic_info" data-original-title="Orégano">Orégano</a>,
+    <a href="#" class="link semantic_info" data-original-title="Azeitonas">Azeitonas</a>
+    <p><a class="btn btn-success" href="#">Adicionar</a></p>
+</p>
+<hr>
+<p>
+    <b>Margherita</b><br/>
+    <a href="#" class="link semantic_info" data-original-title="Tomate">Tomate</a>,
+    <a href="#" class="link semantic_info" data-original-title="Mozarela">Mozarela de búfala</a>,
+    <a href="#" class="link semantic_info" data-original-title="Bacon">Manjeiricão</a>,
+    <a href="#" class="link semantic_info" data-original-title="Azeitonas">Azeitonas</a>
+    <p><a class="btn btn-success" href="#">Adicionar</a></p>
+</p>
+<hr>
+<p>
+    <b>Milho com bacon</b><br/>
+    <a href="#" class="link semantic_info" data-original-title="Molho de tomate">Molho de tomate</a>,
+    <a href="#" class="link semantic_info" data-original-title="Mozarela">Mozarela</a>,
+    <a href="#" class="link semantic_info" data-original-title="Milho">Milho</a>,
+    <a href="#" class="link semantic_info" data-original-title="Bacon">Bacon</a>,
+    <a href="#" class="link semantic_info" data-original-title="Orégano">Orégano</a>,
+    <a href="#" class="link semantic_info" data-original-title="Azeitonas">Azeitonas</a>
+    <p><a class="btn btn-success" href="#">Adicionar</a></p>
+</p>
+<hr>
 
 			
 			     
 	    <!-- Modal -->
-	    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	    <div id="myModal" style="width:300px;" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	      <div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h3 id="myModalLabel">Dinamico?</h3>
+		<h3 id="myModalLabel">Bacon</h3>
 	      </div>
-	      <div class="modal-body"></div>
+	      <div class="modal-body">
+	      <p>CA - Cansalada | <a href="#" class="link">Ouvir</a></p>
+	      <p>CS - Slanina | <a href="#" class="link">Ouvir</a></p>
+	      <p>DE - Frühstücksspeck | <a href="#" class="link">Ouvir</a></p>
+	      <p>EN - Bacon | <a href="#" class="link">Ouvir</a></p>
+	      <p>ES - Panceta | <a href="#" class="link">Ouvir</a></p>
+	      </div>
 	      <div class="modal-footer">
-		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		<button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
 		<!-- <button class="btn btn-primary">Save changes</button> -->
 	      </div>
 	    </div>
