--- a/module/Application/view/application/flavors/list.phtml
+++ b/module/Application/view/application/flavors/list.phtml
@@ -56,8 +56,8 @@ $sabores = array(
     ),
 );
 ?>
+<div id="player"></div>
 <h1>Sabores disponiveis</h1>
-<p><a href="#" class="btn" rel="clickover-ajax" data-original-title="Notes" data-content="&lt;div class=&quot;progress progress-striped active&quot;&gt;&lt;div class=&quot;bar&quot; style=&quot;width: 100%;&quot;&gt;&lt;/div&gt;&lt;/div&gt;" data-contact-id="something">Clickover ajax example</a></p>
 <hr>
 <?php foreach ($sabores as $sabor): ?>
     <p>
@@ -81,24 +81,9 @@ $sabores = array(
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"
 			aria-hidden="true">×</button>
-		<h3 id="myModalLabel">Bacon</h3>
+		<h3 id="modal-label"></h3>
 	</div>
 	<div class="modal-body">
-		<p>
-			CA - Cansalada | <a href="#" class="link">Ouvir</a>
-		</p>
-		<p>
-			CS - Slanina | <a href="#" class="link">Ouvir</a>
-		</p>
-		<p>
-			DE - Frühstücksspeck | <a href="#" class="link">Ouvir</a>
-		</p>
-		<p>
-			EN - Bacon | <a href="#" class="link">Ouvir</a>
-		</p>
-		<p>
-			ES - Panceta | <a href="#" class="link">Ouvir</a>
-		</p>
 	</div>
 	<div class="modal-footer">
 		<button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
