--- a/module/Application/view/application/flavors/list.phtml
+++ b/module/Application/view/application/flavors/list.phtml
@@ -1,76 +1,25 @@
-<?php /*foreach ($this->flavors as $node): ?>
-    <p>
-        <b><?= $node['flavorName']->getProperty('name') ?></b><br/>
-        <?php foreach ($this->ingredients[$node['flavorName']->getId()] as $ingredient): ?>
-            <?= $ingredient->getProperty('name'). ', ' ?>
-        <?php endforeach; ?>
-        
-    </p>
-<?php endforeach;*/
-$sabores = array(
-    array(
-        'name' => 'Bacon',
-        'ingredients' => array(
-            array(
-                'name' => 'Molho de tomate',
-                'resource' => 'Tomato_sauce'
-            ),
-            array(
-            		'name' => 'Mozarela',
-            		'resource' => 'Mozzarella'
-            ),
-            array(
-            		'name' => 'Bacon',
-            		'resource' => 'Bacon'
-            ),
-            array(
-            		'name' => 'Orégano',
-            		'resource' => 'Oregano'
-            ),
-            array(
-            		'name' => 'Azeitonas',
-            		'resource' => 'Olive'
-            ),
-        )
-    ),
-    array(
-		'name' => 'Bacon',
-		'ingredients' => array(
-			array(
-					'name' => 'Molho de tomate',
-					'resource' => 'Tomato_sauce'
-			),
-			array(
-					'name' => 'Mozarela',
-					'resource' => 'Mozzarella'
-			),
-			array(
-					'name' => 'Manjericão',
-					'resource' => 'Basil'
-			),
-			array(
-					'name' => 'Azeitonas',
-					'resource' => 'Olive'
-			),
-		)
-    ),
-);
-?>
 <div id="player"></div>
-<h1>Sabores disponiveis</h1>
-<hr>
-<?php foreach ($sabores as $sabor): ?>
+<h1>Escolha os sabores</h1>
+<hr/>
+<?php foreach ($this->flavors as $node): ?>
     <p>
-    <h4>
-    	<?= $sabor['name'] ?> <a class="btn btn-success btn-small" href="#">Adicionar</a>
-    </h4>
-    <?php foreach ($sabor['ingredients'] as $ingredient): ?>
-        <a href="#" class="link semantic_info" data-resource="<?= $ingredient['resource'] ?>"
-    	data-original-title="<?= $ingredient['name'] ?>"><?= $ingredient['name'] ?></a>,
-    <?php endforeach; ?>
+        <h4>
+            <?= $node['flavorName']->getProperty('name') ?>
+            <a href="#" class="btn btn-warning btn-small">Adicionar</a>
+        </h4>
+        Ingredientes: 
+        <?php foreach ($this->ingredients[$node['flavorName']->getId()] as $ingredient): ?>
+            <?php if($ingredient->getProperty('link')): ?>
+            <a href="#" class="link semantic_info" data-resource="<?= $ingredient->getProperty('link') ?>"
+    	        data-original-title="<?= $ingredient->getProperty('name') ?>">
+    	        <?= $ingredient->getProperty('name') ?></a>,
+    	    <?php else: ?>
+    	        <?= $ingredient->getProperty('name') ?>,
+            <?php endif; ?>
+        <?php endforeach; ?>
+    <hr/>
     </p>
-    <hr>
-<?php endforeach;?>
+<?php endforeach; ?>
 
 
 
@@ -90,6 +39,3 @@ $sabores = array(
 		<!-- <button class="btn btn-primary">Save changes</button> -->
 	</div>
 </div>
-<!-- Click over -->
-<div id="semantic_content" style="display: none"></div>
-
