--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,15 +1,23 @@
 <div class="hero-unit">
-	<h1><?php echo sprintf($this->translate('Welcome to %sAkiPizza%s'), '<span class="zf-green">', '</span>') ?></h1>
-	<p><?php echo sprintf($this->translate('Congratulations! You have successfully logged in to the AkiPizza portal. Here you can ask for a delicious pizza from your favorite pizzeria, view lots of information about flavors and its ingredients and much more. Have a lot of fun!')) ?></p>
+	<h1>Bem vindo ao <span class="zf-green">AkiPizza</span></h1>
+	<p>"Aki" você pode pedir deliciosas pizzas de sua pizzaria favorita, vizualizar informações sobre sabores e seu ingredientes e muito mais. Divirta-se!</p>
     <p><a class="btn btn-success btn-large" href="<?php echo $this->url('pizzerias') ?>">
-        <?php echo $this->translate('Ask for a pizza') ?>
+        Criar um pedido
     </a></p>
 </div>
+<!-- 
+<div class="hero-unit">
+	<h1><?php /* echo sprintf($this->translate('Welcome to %sAkiPizza%s'), '<span class="zf-green">', '</span>') ?></h1>
+	<p><?php echo sprintf($this->translate('Congratulations! You have successfully logged in to the AkiPizza portal. Here you can ask for a delicious pizza from your favorite pizzeria, view lots of information about flavors and its ingredients and much more. Have a lot of fun!')) ?></p>
+    <p><a class="btn btn-success btn-large" href="<?php echo $this->url('pizzerias') ?>">
+        <?php echo $this->translate('Ask for a pizza') */?>
+    </a></p>
+</div> -->
 
-<div class="row">
+<!-- <div class="row">
 
     <div class="span4">
-        <h2><?php echo $this->translate('Manage your data') ?></h2>
+        <h2><?php /*echo $this->translate('Manage your data') ?></h2>
         <p><?php echo sprintf($this->translate('Would you like to see your last requests, your delivery addresses, your favorite flavors and much more? Here you can!')) ?></p>
         <p><a class="btn btn-success" href="#"><?php echo $this->translate('See my data') //TODO write the right links?></a></p>
     </div>
@@ -22,6 +30,6 @@
    <div class="span4">
         <h2><?php echo $this->translate('Contact us!') ?></h2>
         <p><?php echo sprintf($this->translate('Do you have doubts, suggestions or criticals? Please tell us, our team are ready to help you and your opinion is very importat to us!')) ?></p>
-        <p><a class="btn btn-success" href="#"><?php echo $this->translate('Write a message') ?> </a></p>
+        <p><a class="btn btn-success" href="#"><?php echo $this->translate('Write a message') */?> </a></p>
    </div>
-</div>
+</div> -->
