--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -33,8 +33,9 @@
                     <a class="brand" href="<?php echo $this->url('home') ?>"><?php echo 'Akipizza' ?></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                            <li><a href="<?php //echo $this->url('pizzerias') ?>"><?php echo $this->translate('Pizzerias') ?></a></li>
+                            <li><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                            <li><a href="/application/flavors"><?php echo $this->translate('Sabores') ?></a></li>
+                            <li><a href="/application/ingredients/list"><?php echo $this->translate('Ingredientes') ?></a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
